<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright 2008, Google Inc.
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<resources>
    <string name="application_name">Photostream</string>
    <string name="activity_create_shortcut">Flickr photos</string>
    <string name="activity_set_wallpaper">Flickr</string>
    <string name="activity_preferences">Settings</string>

    <string name="screen_login_prompt">Username</string>
    <string name="screen_login_error">Unknown user or network error</string>

    <string name="context_menu_delete_user">Remove</string>
    <string name="context_menu_show_photostream">Show photos</string>    

    <string name="screen_photostream_next">Next</string>
    <string name="screen_photostream_separator">|</string>
    <string name="screen_photostream_back">Back</string>

    <string name="screen_photo_set">Set</string>
    <string name="screen_photo_separator">|</string>
    <string name="screen_photo_back">Back</string>

    <string name="error_cannot_save_file">Photo cannot be set as a wallpaper.</string>
    <string name="success_wallpaper_set">Photo set as wallpaper.</string>

    <string name="menu_item_info_label">Information</string>
    <string name="menu_item_settings_label">Settings</string>
    <string name="menu_item_radar_label">Radar</string>

    <string name="error_cannot_find_location">Could not find location.</string>
    <string name="error_cannot_find_radar">Please install the Radar package.</string>

    <string name="notification_title">New photos</string>
    <string name="notification_new_photos">%s has new photos</string>
    <string name="notification_contact_has_new_photos">%s has updated photos</string>

    <string name="preferences_notifications">Notification settings</string>
    <string name="preferences_notifications_enable">New photos notifications</string>
    <string name="preferences_notifications_summary">Notify in status bar when new photos are available</string>

    <string name="preferences_vibrate_enable">Vibrate</string>
    <string name="preferences_vibrate_summary">Also vibrate when new photos are available</string>

    <string name="preferences_ring_enable">Sound</string>
    <string name="preferences_ring_summary">Also play ringtone when new photos are available</string>

    <string name="preferences_ringtone">Select ringtone</string>

    <!-- EULA -->
    <string name="eula_title">License agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Don\'t accept</string>

    <string name="disclaimer_title">Disclaimer</string>    
    <string name="disclaimer_accept">Accept</string>
</resources>
