<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright 2008, Google Inc.
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.google.android.photostream.GridLayout
        style="@style/PhotoGrid"
        android:id="@+id/grid_photos"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:paddingLeft="10dip"
        android:paddingTop="15dip"
        android:paddingRight="10dip"
        android:paddingBottom="55dip" />

    <ViewAnimator
        android:id="@+id/switcher_menu"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:inAnimation="@anim/fade_in"
        android:outAnimation="@anim/fade_out">

        <include layout="@layout/shared_progress" />

        <LinearLayout
            style="@style/TextMenu"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:gravity="right">

            <TextView
                style="@style/TextMenuEntry"
                android:id="@+id/menu_back"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/screen_photostream_back" />

            <TextView
                style="@style/TextMenuEntry"
                android:id="@+id/menu_separator"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"

                android:text="@string/screen_photostream_separator" />

            <TextView
                style="@style/TextMenuEntry"
                android:id="@+id/menu_next"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/screen_photostream_next" />

        </LinearLayout>

    </ViewAnimator>

</FrameLayout>
