<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright 2008, Google Inc.
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/container_photo"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:paddingLeft="40dip"
        android:paddingRight="40dip"

        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_photo"

            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="25dip"

            android:scaleType="center" />

        <TextView
            android:id="@+id/caption_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="18px"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/caption_date"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dip"

            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="14px"
            android:textColor="@color/translucent_white" />

    </LinearLayout>

    <ViewAnimator
        android:id="@+id/switcher_menu"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:inAnimation="@anim/fade_in"
        android:outAnimation="@anim/fade_out">

        <include layout="@layout/shared_progress" />

        <LinearLayout
            style="@style/TextMenu"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:gravity="right">

            <TextView
                style="@style/TextMenuEntry"
                android:id="@+id/menu_set"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/screen_photo_set" />

            <TextView
                style="@style/TextMenuEntry"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"

                android:text="@string/screen_photostream_separator" />

            <TextView
                style="@style/TextMenuEntry"
                android:id="@+id/menu_back"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/screen_photo_back" />

        </LinearLayout>

    </ViewAnimator>

</FrameLayout>
